--- a/LinearRegression /Ridge_and_Lasso_Regularization.ipynb
+++ b/LinearRegression /Ridge_and_Lasso_Regularization.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/njpinton/CMSC173/blob/main/LinearRegression/Ridge_and_Lasso_Regularization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/njpinton/CMSC173/blob/main/LinearRegression%20/Ridge_and_Lasso_Regularization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
